test/tests/errors/error-procedure-incorrect-param.sm
// true
// false
// false
/**/
/**/

program {
    proc x(a: int, b: int) {
        output "t";
    }

    x(4);
}